syntax = "proto3";

package lilac.rpcframework.remote.proto;

option java_package = "lilac.rpcframework.remote.proto";

option java_outer_classname = "HelloDtoProto";

message HelloDto {
  string message = 1;
  string description = 2;
}