syntax = "proto3";

package lilac.rpcframework.remote.proto;

option java_package = "lilac.rpcframework.remote.proto";

option java_outer_classname = "RpcResponseProto";

import "google/protobuf/any.proto";

message RpcResponse {

  string request_id = 1;

  int32 code = 2;

  string message = 3;

  google.protobuf.Any data = 4;

  string return_type = 5;

  string service_address = 6;

}